--- a/pom.xml
+++ b/pom.xml
@@ -18,8 +18,7 @@
         <ttl.version>2.12.2</ttl.version>
         <spring.version>5.0.12.RELEASE</spring.version>
         <slf4j.version>1.7.32</slf4j.version>
-        <junit-jupiter.version>5.8.1</junit-jupiter.version>
-
+        <spring.boot.version>2.2.6.RELEASE</spring.boot.version>
     </properties>
 
 
@@ -32,15 +31,14 @@
         </dependency>
         <!-- spring -->
         <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-context</artifactId>
-            <version>${spring.version}</version>
-            <scope>provided</scope>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+            <version>${spring.boot.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-test</artifactId>
-            <version>${spring.version}</version>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <version>${spring.boot.version}</version>
             <scope>test</scope>
         </dependency>
         <!-- log -->
@@ -55,13 +53,7 @@
             <version>${slf4j.version}</version>
             <scope>test</scope>
         </dependency>
-        <!-- junit5 -->
-        <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter</artifactId>
-            <version>${junit-jupiter.version}</version>
-            <scope>test</scope>
-        </dependency>
+
     </dependencies>
     <distributionManagement>
         <repository>
